2007-05-16  Don Porter  <dgp@users.sourceforge.net>

	* tests/bind.test:      Make test suite more SCIM-tolerant [Bug 1609316]

2007-05-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Test ttk widgets

2007-05-15  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Fix crash introduced by previous fix
	exposed under newer fontconfig libraries [Bug 1717830 again].

2007-05-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkGrid.c: Stop crash due to list intrep shimmer [Bug 1677608]

2007-05-15  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Fix various memory leaks [Bug 1717830], 
	[Bug 800149].

2007-05-14  Don Porter  <dgp@users.sourceforge.net>

	[Tk Bug 1712081]

	* unix/Makefile.in:	Updates to account for new and deleted files
	* win/Makefile.in:	tkStubImg.c and tkOldTest.c.
	* win/makefile.bc:
	* win/makefile.vc:

	* generic/tkOldTest.c (new):	New file used to create testing
	* generic/tkTest.c:		commands for testing various Tk
	* tests/constraints.tcl:	legacy interfaces where a separate
	* tests/image.test:		compilation unit is needed in order
	to #define suitable macros during compilation.  Only the effect of
	USE_OLD_IMAGE on Tk_CreateImageType() is currently tested, but more
	similar testing commands can be added to this same file.  New
	constraint defined to detect presence of the image type provided by
	the new testing code, and a few tests added to exercise it.  Having
	USE_OLD_IMAGE support tested by the default test suite should reduce
	chance of a recurrence of this bug.

	* doc/CrtImgType.3:	Revised docs to better indicate the legacy
	* doc/CrtPhImgFmt.3:	nature of the interfaces supported by
	USE_OLD_IMAGE.

	* generic/tkDecls.h:	make genstubs
	* generic/tkStubInit.c:

	* generic/tk.decls:		Reworked USE_OLD_IMAGE support to use
	* generic/tk.h:			the same support mechanisms both with
	* generic/tkStubImg.c (deleted):and without a stub-enabled build.  In