@@ -3,7 +3,7 @@
 #	Some functions needed for the common dialog boxes. Probably need to go
 #	in a different file.
 #
-# RCS: @(#) $Id: comdlg.tcl,v 1.13 2006/01/25 18:22:04 dgp Exp $
+# RCS: @(#) $Id: comdlg.tcl,v 1.14 2007/05/16 18:10:35 dgp Exp $
 #
 # Copyright (c) 1996 Sun Microsystems, Inc.
 #
@@ -259,7 +259,7 @@ proc ::tk::FDGetFileTypes {string} {
 	if {[llength $t] < 2 || [llength $t] > 3} {
 	    error "bad file type \"$t\", should be \"typeName {extension ?extensions ...?} ?{macType ?macTypes ...?}?\""
 	}
-	lappend fileTypes([lindex $t 0]) {expand}[lindex $t 1]
+	lappend fileTypes([lindex $t 0]) {*}[lindex $t 1]
     }
 
     set types {}
