@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvImg.test,v 1.8 2004/05/23 17:34:48 dkf Exp $
+# RCS: @(#) $Id: canvImg.test,v 1.9 2007/05/16 18:10:35 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -252,8 +252,8 @@ foreach check {
 } {
     lassign $check name rectCoords testPoint result
     test $name {ImageToPoint procedure} testImageType {
-	.c coords rect {expand}$rectCoords
-	.c gettags [.c find closest {expand}$testPoint]
+	.c coords rect {*}$rectCoords
+	.c gettags [.c find closest {*}$testPoint]
     } $result
 }
 
